# flask-tailwind-template-cookiecutter

./: .gitignore  LICENSE  README.md  cookiecutter.json  cookiecutter_update.py  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .env-flask  .gitignore  README.md  config.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tailwind.config.js  utils.py  wsgi.py
{{cookiecutter.project_slug}}/application/: __init__.py  assets.py
{{cookiecutter.project_slug}}/application/home/: routes.py
{{cookiecutter.project_slug}}/application/home/templates/: home.html
{{cookiecutter.project_slug}}/application/static/src/js/: global.js
{{cookiecutter.project_slug}}/application/templates/: base.html  nav.html
