[tool.poetry]
name = "flask-tailwind-template"
version = "0.1.0"
description = "A more advanced configuration of Flask with TailwindCSS implemented"
authors = ["Jon Cording <joncording12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.1.2"
Flask-Assets = "^2.0"
Flask-Admin = "^1.6.0"
python-dotenv = "^0.20.0"
cssmin = "^0.2.0"
jsmin = "^3.0.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

# Configuration for formatters
[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

